Convert project from article to beamer presentation with updated title and structure

--- a/project_documentation.tex
+++ b/project_documentation.tex
@@ -1,6 +1,6 @@
-\documentclass[12pt,letterpaper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[margin=1in]{geometry}
+\documentclass{beamer}
+\usetheme{Madrid}
+\usecolortheme{default}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{graphicx}
 \usepackage{hyperref}
@@ -8,185 +8,407 @@
 \usepackage{algorithmic}
 \usepackage{xcolor}
 \usepackage{listings}
-\usepackage{float}
 
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
     filecolor=magenta,      
-    urlcolor=cyan,
-    pdftitle={PageRank with Weighted Directed Graphs},
-    pdfpagemode=FullScreen,
+    urlcolor=cyan
 }
 
-\title{Ranking People on a Simulated LinkedIn:\\
-Exploring PageRank with Weighted Directed Graphs}
+\title[PageRank Analysis]{Analyzing Email Network Influence:\\PageRank with Weighted Directed Graphs}
 \author{Michelle Lawson \& Adriana Soldat}
+\institute{Linear Algebra Final Project}
 \date{\today}
 
 \begin{document}
 
-\maketitle
+\begin{frame}
+    \titlepage
+\end{frame}
 
-\begin{abstract}
-    This project explores the PageRank algorithm—a method originally used by Google to rank webpages—to analyze influence and connection strength in a directed, weighted social network. We simulate a LinkedIn-style network where nodes represent users and edges are based on message activity between them. Unlike undirected graphs (where all relationships are mutual), our graph is directed and weighted: the direction indicates who messages whom, and the weight represents how many times they message each other. This allows us to analyze influence, popularity, and potentially provide recommendations based on communication patterns. We also explore community detection using the Laplacian matrix's zero eigenvalue eigenspace.
-\end{abstract}
+\begin{frame}
+    \frametitle{Overview}
+    \tableofcontents
+\end{frame}
 
 \section{Introduction}
-\subsection{Motivation}
-Social networks play a crucial role in our digital interactions, connecting billions of users worldwide. Understanding the structure and dynamics of these networks can provide valuable insights into social influence, information flow, and community formation. In this project, we apply linear algebra techniques to analyze a simulated LinkedIn network, focusing on identifying influential nodes and detecting communities based on communication patterns.
 
-\subsection{Background}
-The PageRank algorithm, developed by Google founders Larry Page and Sergey Brin, revolutionized web search by ranking pages based on their importance within the network. The algorithm treats web links as "votes" of importance, with pages that receive many links from important pages being considered more important themselves. This concept can be extended to social networks, where connections and interactions can indicate social influence.
+\begin{frame}
+    \frametitle{Project Overview}
+    \begin{itemize}
+        \item Analysis of the SNAP email-Eu-core dataset using PageRank
+        \item Directed, weighted graph representing email communications
+        \item Direction: who emails whom
+        \item Weight: frequency of email communication
+        \item Application of linear algebra for network analysis
+        \item Community detection through Laplacian matrix
+    \end{itemize}
+\end{frame}
 
-\subsection{Project Objectives}
-\begin{itemize}
-    \item Implement the PageRank algorithm for a weighted, directed social network
-    \item Analyze how message frequency affects node importance
-    \item Detect communities using the Laplacian matrix's eigenspaces
-    \item Visualize the network with an intuitive heatmap representation
-    \item Simulate changes in the network and observe their effects on rankings
-\end{itemize}
+\begin{frame}
+    \frametitle{Dataset: email-Eu-core}
+    \begin{itemize}
+        \item Email communication network from a European research institution
+        \item Edge (u,v): person u sent person v at least one email
+        \item Contains only internal communications
+        \item Includes department affiliations (ground truth communities)
+        \item 1005 nodes (institution members)
+        \item 25571 edges (email communications)
+        \item 42 departments (communities)
+    \end{itemize}
+    \small{Source: Stanford Network Analysis Project (SNAP)}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Project Objectives}
+    \begin{itemize}
+        \item Implement the PageRank algorithm for a weighted, directed email network
+        \item Analyze how email frequency affects member influence
+        \item Detect communities using the Laplacian matrix's eigenspaces
+        \item Compare with ground-truth department affiliations
+        \item Visualize the network with an intuitive heatmap representation
+        \item Simulate changes to observe how new communications affect rankings
+    \end{itemize}
+\end{frame}
 
 \section{Mathematical Framework}
-\subsection{Weighted Adjacency Matrix}
-For a graph with $n$ nodes, we construct an $n \times n$ weighted adjacency matrix $W$ where:
-\begin{equation}
-    W_{ij} = \text{Number of messages from node $i$ to node $j$}
-\end{equation}
 
-If no messages exist between nodes, the corresponding matrix entry is 0.
+\begin{frame}
+    \frametitle{Weighted Adjacency Matrix}
+    \begin{itemize}
+        \item For a graph with $n$ nodes (institute members), we construct an $n \times n$ weighted adjacency matrix $W$
+        \item Each entry represents email frequency:
+    \end{itemize}
+    \begin{equation}
+        W_{ij} = \text{Number of emails from member $i$ to member $j$}
+    \end{equation}
+    \begin{itemize}
+        \item If no emails exist between members, the corresponding matrix entry is 0
+        \item The matrix is generally asymmetric, reflecting the directed nature of emails
+    \end{itemize}
+\end{frame}
 
-\subsection{PageRank Algorithm}
-The PageRank vector $\mathbf{r}$ satisfies:
-\begin{equation}
-    \mathbf{r} = \alpha M\mathbf{r} + (1-\alpha)\mathbf{p}
-\end{equation}
+\begin{frame}
+    \frametitle{PageRank Algorithm}
+    The PageRank vector $\mathbf{r}$ satisfies:
+    \begin{equation}
+        \mathbf{r} = \alpha M\mathbf{r} + (1-\alpha)\mathbf{p}
+    \end{equation}
+    
+    Where:
+    \begin{itemize}
+        \item $\alpha$ is the damping factor (typically 0.85)
+        \item $M$ is the transition matrix derived from the weighted adjacency matrix:
+        $M_{ji} = \frac{W_{ij}}{\sum_k W_{ik}}$
+        \item $\mathbf{p}$ is the personalization vector (uniform in our implementation)
+    \end{itemize}
+    
+    Interpretation: The importance of a member depends on the importance of those who email them and the frequency of those emails.
+\end{frame}
 
-Where:
-\begin{itemize}
-    \item $\alpha$ is the damping factor (typically 0.85)
-    \item $M$ is the transition matrix derived from the weighted adjacency matrix $W$
-    \item $\mathbf{p}$ is the personalization vector (uniform in our implementation)
-\end{itemize}
+\begin{frame}
+    \frametitle{Power Iteration Method}
+    \begin{algorithm}[H]
+    \caption{PageRank with Power Iteration}
+    \begin{algorithmic}
+    \STATE Initialize $\mathbf{r}_0$ to uniform distribution
+    \STATE $k \gets 0$
+    \WHILE{not converged}
+        \STATE $\mathbf{r}_{k+1} \gets \alpha M \mathbf{r}_k + (1-\alpha)\mathbf{p}$
+        \STATE $\mathbf{r}_{k+1} \gets \mathbf{r}_{k+1} / \|\mathbf{r}_{k+1}\|_1$
+        \STATE $k \gets k + 1$
+    \ENDWHILE
+    \RETURN $\mathbf{r}_k$
+    \end{algorithmic}
+    \end{algorithm}
+    
+    Power iteration converges to the dominant eigenvector of the matrix.
+\end{frame}
 
-The transition matrix $M$ is computed by normalizing the columns of $W$ such that they sum to 1, representing the probability of transitioning from one node to another.
-
-\subsection{Laplacian Matrix for Community Detection}
-The Laplacian matrix $L$ is defined as:
-\begin{equation}
-    L = D - W_{sym}
-\end{equation}
-
-Where:
-\begin{itemize}
-    \item $D$ is the degree matrix (diagonal matrix with node degrees)
-    \item $W_{sym}$ is the symmetrized version of the weighted adjacency matrix
-\end{itemize}
-
-The multiplicity of the eigenvalue 0 in the spectrum of $L$ indicates the number of connected components in the graph. We use this property to detect communities within our network.
+\begin{frame}
+    \frametitle{Laplacian Matrix for Community Detection}
+    The Laplacian matrix $L$ is defined as:
+    \begin{equation}
+        L = D - W_{sym}
+    \end{equation}
+    
+    Where:
+    \begin{itemize}
+        \item $D$ is the degree matrix (diagonal matrix with node degrees)
+        \item $W_{sym}$ is the symmetrized version of the weighted adjacency matrix
+    \end{itemize}
+    
+    Key property: The multiplicity of the eigenvalue 0 in the spectrum of $L$ indicates the number of connected components in the graph.
+\end{frame}
 
 \section{Implementation}
-\subsection{Dataset}
-We used the SNAP email-Eu-core network dataset, which represents email communications between members of a European research institution. The dataset consists of directed edges representing who sent an email to whom, with edge weights indicating the number of communications.
 
-\subsection{Code Structure}
-We developed both Python and MATLAB implementations of our analysis:
+\begin{frame}
+    \frametitle{Implementation Overview}
+    We developed both Python and MATLAB implementations:
+    \begin{itemize}
+        \item Python: Using NetworkX library for graph operations
+        \item MATLAB: Using native matrix operations
+        \item Core components in both implementations:
+        \begin{itemize}
+            \item Data loading from SNAP dataset files
+            \item PageRank computation using power iteration
+            \item Laplacian analysis for community detection
+            \item Network visualization with heat map coloring
+            \item Simulation of additional communications
+        \end{itemize}
+    \end{itemize}
+\end{frame}
 
-\begin{itemize}
-    \item Data loading: Parsing the dataset files and constructing the weighted directed graph
-    \item PageRank computation: Implementing power iteration method for PageRank calculation
-    \item Community detection: Analysis of the Laplacian's zero-eigenvalue eigenspace
-    \item Visualization: Creating an intuitive heatmap representation of node importance
-    \item Simulation: Functions to modify the network and observe changes in rankings
-\end{itemize}
+\begin{frame}[fragile]
+    \frametitle{Python Implementation: PageRank}
+    \begin{lstlisting}[language=Python, basicstyle=\tiny]
+# PageRank implementation with custom weighting
+def pagerank(G: nx.DiGraph, alpha: float = 0.85, tol: float = 1e-6,
+             max_iter: int = 100) -> Dict[int, float]:
+    return nx.pagerank(G, alpha=alpha, tol=tol, 
+                     max_iter=max_iter, weight="weight")
 
-\subsection{Algorithm Details}
-\begin{algorithm}
-\caption{PageRank with Power Iteration}
-\begin{algorithmic}
-\STATE Initialize $\mathbf{r}_0$ to uniform distribution
-\STATE $k \gets 0$
-\WHILE{not converged}
-    \STATE $\mathbf{r}_{k+1} \gets \alpha M \mathbf{r}_k + (1-\alpha)\mathbf{p}$
-    \STATE $\mathbf{r}_{k+1} \gets \mathbf{r}_{k+1} / \|\mathbf{r}_{k+1}\|_1$
-    \STATE $k \gets k + 1$
-\ENDWHILE
-\RETURN $\mathbf{r}_k$
-\end{algorithmic}
-\end{algorithm}
+# Display top-k nodes by PageRank
+def display_topk(pr: Dict[int, float], k: int = 10) -> None:
+    import pandas as pd
+    top = sorted(pr.items(), key=lambda x: x[1], reverse=True)[:k]
+    print(pd.DataFrame(top, columns=["node", "PageRank score"]).to_string(index=False))
+    \end{lstlisting}
+    
+    [Insert screenshots of output showing top-ranked nodes]
+\end{frame}
 
-\section{Results and Analysis}
-\subsection{PageRank Distribution}
-[This section will contain analysis of the PageRank scores distribution]
+\begin{frame}[fragile]
+    \frametitle{MATLAB Implementation: PageRank}
+    \begin{lstlisting}[language=Matlab, basicstyle=\tiny]
+% PageRank implementation
+function pr = pagerank(G, weights, alpha, tol, max_iter)
+    if nargin < 3, alpha = 0.85; end
+    if nargin < 4, tol = 1e-6; end
+    if nargin < 5, max_iter = 100; end
+    
+    n = size(G, 1);
+    pr = ones(n, 1) / n;
+    out_degree = sum(weights, 2);
+    dangling = (out_degree == 0);
+    
+    for iter = 1:max_iter
+        prev_pr = pr;
+        M = weights ./ repmat(out_degree, 1, n);
+        M(isnan(M)) = 0;
+        
+        rand_contribution = (alpha * sum(pr(dangling)) / n) + 
+                           ((1 - alpha) / n);
+        pr = alpha * M' * pr + rand_contribution * ones(n, 1);
+        pr = pr / sum(pr);
+        
+        if norm(pr - prev_pr, 1) < tol
+            break;
+        end
+    end
+end
+    \end{lstlisting}
+\end{frame}
 
-\subsection{Influential Nodes}
-[This section will discuss the characteristics of the most influential nodes]
+\begin{frame}[fragile]
+    \frametitle{Community Detection Implementation}
+    \begin{lstlisting}[language=Python, basicstyle=\tiny]
+# Laplacian zero-eigenvalue multiplicity
+def laplacian_zero_eigenspace_dim(G: nx.Graph) -> int:
+    H = G.to_undirected(as_view=False)
+    A = nx.to_scipy_sparse_array(H, weight="weight", dtype=float, format="csr")
+    degrees = np.ravel(A.sum(axis=1))
+    L = np.diag(degrees) - A.toarray()
+    eigvals = np.linalg.eigvalsh(L)
+    return int(np.sum(np.isclose(eigvals, 0.0, atol=1e-8)))
+    \end{lstlisting}
+    
+    Our analysis found [insert number] connected components in the email network, while the ground truth has 42 departments.
+\end{frame}
 
-\subsection{Community Structure}
-[This section will analyze the communities detected through Laplacian analysis]
+\section{Results}
 
-\subsection{Effect of Message Frequency}
-[This section will explore how changes in communication patterns affect rankings]
+\begin{frame}
+    \frametitle{PageRank Scores Distribution}
+    [Insert visualization of PageRank distribution across nodes]
+    
+    Key observations:
+    \begin{itemize}
+        \item The distribution follows a power law (as expected in social networks)
+        \item Most members have relatively low influence
+        \item A small number of highly influential members (opinion leaders)
+        \item [Additional observations from your results]
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Most Influential Members}
+    [Insert table or visualization of top-10 members by PageRank]
+    
+    Characteristics of influential nodes:
+    \begin{itemize}
+        \item Higher connectivity (both incoming and outgoing emails)
+        \item Connect to other influential members
+        \item Often bridge between different departments
+        \item [Additional characteristics from your analysis]
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Community Detection Results}
+    [Insert visualization comparing detected communities with ground truth]
+    
+    Findings:
+    \begin{itemize}
+        \item Laplacian analysis identified [X] distinct communities
+        \item [Percentage] overlap with the 42 ground-truth departments
+        \item Some departments form natural clusters in the network
+        \item Cross-departmental communication creates bridges between communities
+        \item [Additional findings from your analysis]
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Simulating Additional Communications}
+    [Insert visualization showing ranking changes after simulation]
+    
+    Effects of adding 100 simulated emails between nodes [X] and [Y]:
+    \begin{itemize}
+        \item Node [X] increased in rank from [A] to [B]
+        \item Influence propagated to neighbors of Node [Y]
+        \item [Additional effects observed in your simulation]
+    \end{itemize}
+\end{frame}
 
 \section{Visualization}
-\subsection{Network Heatmap}
-\begin{figure}[H]
-    \centering
-    [Insert your visualization here]
-    \caption{Network visualization with node colors representing PageRank scores (red for high importance, blue for low importance)}
-    \label{fig:network}
-\end{figure}
 
-\subsection{Ranking Changes Before and After Simulated Messages}
-\begin{figure}[H]
-    \centering
-    [Insert before/after visualization here]
-    \caption{Changes in PageRank scores after simulating additional messages}
-    \label{fig:changes}
-\end{figure}
+\begin{frame}
+    \frametitle{Network Visualization - Initial State}
+    [Insert network visualization with PageRank heatmap]
+    
+    Visualization details:
+    \begin{itemize}
+        \item Node color represents PageRank score (red = high, blue = low)
+        \item Node size proportional to PageRank score
+        \item Edge thickness represents communication frequency
+        \item Layout algorithm: Force-directed placement
+    \end{itemize}
+\end{frame}
 
-\section{Discussion}
-\subsection{Real-World Applications}
-The analysis techniques explored in this project have several practical applications:
-\begin{itemize}
-    \item Identifying influential users in social networks
-    \item Recommending connections based on communication patterns
-    \item Detecting communities for targeted marketing or content delivery
-    \item Analyzing information flow and potential bottlenecks in organizational communications
-    \item Understanding the emergence of opinion leaders in online discussions
-\end{itemize}
+\begin{frame}
+    \frametitle{Network Changes After Simulation}
+    [Insert before/after visualization comparison]
+    
+    Visual comparison showing:
+    \begin{itemize}
+        \item Shift in importance after 100 additional emails
+        \item Propagation of influence through the network
+        \item Local vs. global effects of new communications
+        \item [Additional visual insights]
+    \end{itemize}
+\end{frame}
 
-\subsection{Limitations}
-\begin{itemize}
-    \item The simulation assumes that message frequency directly correlates with influence
-    \item Community detection based solely on the Laplacian may miss more nuanced group structures
-    \item Real social networks have additional attributes and dynamics not captured in our model
-\end{itemize}
+\begin{frame}
+    \frametitle{Department-based Community Visualization}
+    [Insert visualization of communities by department]
+    
+    Visual insights:
+    \begin{itemize}
+        \item Color-coding by department shows organizational structure
+        \item Inter-departmental vs. intra-departmental communication patterns
+        \item Correlation between PageRank and position in organizational hierarchy
+        \item [Additional insights from department visualization]
+    \end{itemize}
+\end{frame}
+
+\section{Real-World Applications}
+
+\begin{frame}
+    \frametitle{Organizational Applications}
+    Our analysis provides insights relevant to organizational dynamics:
+    \begin{itemize}
+        \item Identifying key information brokers within organizations
+        \item Optimizing communication flow and reducing bottlenecks
+        \item Improving team structures based on natural communication patterns
+        \item Detecting informal leadership networks alongside formal hierarchies
+        \item Supporting organizational restructuring decisions with data
+        \item Knowledge management and succession planning for critical roles
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Broader Applications}
+    The techniques extend beyond email networks to other contexts:
+    \begin{itemize}
+        \item Social media influence analysis
+        \item Scientific collaboration networks
+        \item Financial transaction networks
+        \item Recommendation systems
+        \item Epidemic spread modeling
+        \item Supply chain optimization
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Limitations and Future Work}
+    \begin{itemize}
+        \item Limitations:
+        \begin{itemize}
+            \item Email frequency may not perfectly correlate with influence
+            \item Lacks content analysis of communications
+            \item Temporal dynamics not fully captured
+        \end{itemize}
+        \item Future directions:
+        \begin{itemize}
+            \item Incorporate temporal evolution of the network
+            \item Compare with formal organizational hierarchy
+            \item Analyze email content for sentiment and topics
+            \item Explore alternative community detection methods
+        \end{itemize}
+    \end{itemize}
+\end{frame}
 
 \section{Conclusion}
-This project successfully applied linear algebra concepts—specifically eigenvalues, eigenvectors, and matrix operations—to analyze influence and community structure in a directed, weighted social network. Our implementation of PageRank provides insights into node importance based on communication patterns, while the Laplacian analysis reveals community structures.
 
-By simulating changes in the network, we observed how new interactions affect the overall importance distribution, demonstrating the dynamic nature of influence in social networks. These methods provide a mathematical foundation for understanding complex social structures and could be extended to various real-world applications in social media analysis, organizational communication, and recommendation systems.
+\begin{frame}
+    \frametitle{Conclusion}
+    Our analysis of the email-Eu-core network demonstrates:
+    \begin{itemize}
+        \item PageRank effectively identifies influential members in an email network
+        \item Email communication patterns reveal informal influence structures
+        \item Laplacian analysis can detect communities that may differ from formal departments
+        \item Small changes in communication patterns can significantly shift influence distribution
+        \item Linear algebra provides powerful tools for analyzing organizational networks
+    \end{itemize}
+    
+    Key takeaway: The mathematical framework of linear algebra offers valuable insights into the structure and dynamics of communication networks.
+\end{frame}
 
-\section{References}
-\begin{enumerate}
-    \item Page, L., Brin, S., Motwani, R., \& Winograd, T. (1999). The PageRank citation ranking: Bringing order to the web. Stanford InfoLab.
-    \item Fortunato, S. (2010). Community detection in graphs. Physics Reports, 486(3-5), 75-174.
-    \item Leskovec, J., \& Krevl, A. (2014). SNAP Datasets: Stanford Large Network Dataset Collection. \url{http://snap.stanford.edu/data}
-    \item von Luxburg, U. (2007). A tutorial on spectral clustering. Statistics and Computing, 17(4), 395-416.
-\end{enumerate}
+\begin{frame}[allowframebreaks]
+    \frametitle{References}
+    \begin{thebibliography}{9}
+    \bibitem{page1999} Page, L., Brin, S., Motwani, R., \& Winograd, T. (1999). The PageRank citation ranking: Bringing order to the web. Stanford InfoLab.
+    
+    \bibitem{fortunato2010} Fortunato, S. (2010). Community detection in graphs. Physics Reports, 486(3-5), 75-174.
+    
+    \bibitem{leskovec2014} Leskovec, J., \& Krevl, A. (2014). SNAP Datasets: Stanford Large Network Dataset Collection. \url{http://snap.stanford.edu/data}
+    
+    \bibitem{yin2017} Yin, H., Benson, A. R., Leskovec, J., \& Gleich, D. F. (2017). Local Higher-order Graph Clustering. In Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining.
+    
+    \bibitem{vonluxburg2007} von Luxburg, U. (2007). A tutorial on spectral clustering. Statistics and Computing, 17(4), 395-416.
+    \end{thebibliography}
+\end{frame}
 
-\appendix
-\section{Code Implementation}
-\subsection{Python Implementation}
-\begin{lstlisting}[language=Python, caption=PageRank and Community Detection in Python]
-# Include key sections of your Python code here
-\end{lstlisting}
-
-\subsection{MATLAB Implementation}
-\begin{lstlisting}[language=Matlab, caption=PageRank and Community Detection in MATLAB]
-# Include key sections of your MATLAB code here
-\end{lstlisting}
+\begin{frame}
+    \frametitle{Thank You!}
+    \begin{center}
+        \Huge{Questions?}
+        
+        \vspace{1cm}
+        \large{Michelle Lawson \& Adriana Soldat}
+    \end{center}
+\end{frame}
 
 \end{document}
